--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "find-npm-packages",
   "type": "module",
   "version": "0.0.1",
-  "packageManager": "pnpm@10.4.1",
+  "packageManager": "pnpm@10.5.2",
   "description": "Find npm packages from given source code.",
   "keywords": [
     "find",
@@ -61,6 +61,7 @@
     "validate-npm-package-name": "^6.0.0"
   },
   "devDependencies": {
+    "@babel/types": "^7.26.9",
     "@ntnyq/eslint-config": "^4.0.0-beta.8",
     "@ntnyq/prettier-config": "^2.0.0",
     "@types/node": "^22.13.5",
@@ -71,7 +72,7 @@
     "nano-staged": "^0.8.0",
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.5.2",
-    "tsup": "^8.3.6",
+    "tsup": "^8.4.0",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3",
     "vite": "^6.2.0",
