--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit",
-    "source.organizeImports": "never"
+    "source.organizeImports": "never",
+    "source.sortImports": "never"
   },
   "eslint.validate": [
     "vue",
@@ -24,7 +25,7 @@
   "cSpell.words": [
     "bumpp",
     "changelogithub",
-    "codecov",
+    "esbuild",
     "lcov",
     "pnpm",
     "vite",
