--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "find-npm-packages",
   "type": "module",
   "version": "0.0.2",
-  "packageManager": "pnpm@10.5.2",
+  "packageManager": "pnpm@10.6.5",
   "description": "Find npm packages from given source code.",
   "keywords": [
     "find",
@@ -22,19 +22,12 @@
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "import": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
-      },
-      "require": {
-        "types": "./dist/index.d.cts",
-        "default": "./dist/index.cjs"
-      }
+      "types": "./dist/index.d.mts",
+      "default": "./dist/index.mjs"
     }
   },
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/index.mjs",
+  "types": "./dist/index.d.mts",
   "files": [
     "dist"
   ],
@@ -43,54 +36,44 @@
   },
   "sideEffects": false,
   "scripts": {
-    "build": "tsup",
-    "coverage": "vitest --coverage",
-    "dev": "tsup --watch src",
-    "lint": "eslint .",
+    "build": "unbuild",
+    "dev": "unbuild --watch",
+    "lint": "eslint",
     "prepare": "husky",
     "prepublishOnly": "pnpm run build",
-    "release": "run-s release:check release:publish",
+    "release": "run-s release:check release:version release:publish",
     "release:check": "run-s lint typecheck test",
-    "release:publish": "bumpp && pnpm publish",
+    "release:publish": "pnpm publish",
+    "release:version": "bumpp",
     "test": "vitest",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@babel/parser": "^7.26.9",
-    "ast-kit": "^1.4.0",
+    "@babel/parser": "^7.27.0",
+    "ast-kit": "^1.4.2",
     "validate-npm-package-name": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/types": "^7.26.9",
-    "@ntnyq/eslint-config": "^4.0.0-beta.8",
+    "@babel/types": "^7.27.0",
+    "@ntnyq/eslint-config": "^4.0.2",
     "@ntnyq/prettier-config": "^2.0.0",
-    "@types/node": "^22.13.5",
-    "@vitest/coverage-v8": "^3.0.7",
-    "bumpp": "^10.0.3",
-    "eslint": "^9.21.0",
+    "@types/node": "^22.13.13",
+    "@types/validate-npm-package-name": "^4.0.2",
+    "bumpp": "^10.1.0",
+    "eslint": "^9.23.0",
     "husky": "^9.1.7",
     "nano-staged": "^0.8.0",
     "npm-run-all2": "^7.0.2",
-    "prettier": "^3.5.2",
-    "tsup": "^8.4.0",
-    "tsx": "^4.19.3",
-    "typescript": "^5.7.3",
-    "vite": "^6.2.0",
-    "vitest": "^3.0.7"
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.2",
+    "unbuild": "^3.5.0",
+    "vite": "^6.2.3",
+    "vitest": "^3.0.9"
   },
   "engines": {
     "node": ">=18.18.0"
   },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "esbuild"
-    ],
-    "overrides": {
-      "esbuild": "^0.25.0"
-    }
-  },
   "nano-staged": {
-    "*.{js,ts,mjs,cjs,json,md,yml,yaml}": "eslint --fix",
-    "*.{css,scss,html}": "prettier -uw"
+    "*.{js,ts,mjs,cjs,md,yml,yaml,toml,json}": "eslint --fix"
   }
 }
