--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,6 @@
 packages:
-  - docs
-  - playground
-  - packages/*
-  - examples/*
+  - .
+overrides:
+  esbuild: ^0.25.1
+onlyBuiltDependencies:
+  - esbuild
