feat: add package `find-regexp-literals`

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@10.14.0",
+  "packageManager": "pnpm@10.15.1",
   "license": "MIT",
   "scripts": {
     "build": "pnpm -r run build",
@@ -11,28 +11,27 @@
     "lint": "eslint",
     "prepare": "husky",
     "prepublishOnly": "pnpm run build",
-    "release": "run-s release:check release:version release:publish",
+    "release": "run-s release:check release:version",
     "release:check": "run-s lint typecheck test",
-    "release:publish": "pnpm -r publish",
     "release:version": "bumpp -r",
     "test": "vitest",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@babel/types": "^7.28.2",
-    "@ntnyq/eslint-config": "^4.3.0",
+    "@ntnyq/eslint-config": "^5.4.2",
     "@ntnyq/prettier-config": "^3.0.1",
-    "@types/node": "^22.17.2",
+    "@types/node": "^22.18.0",
     "@types/validate-npm-package-name": "^4.0.2",
     "bumpp": "^10.2.3",
-    "eslint": "^9.33.0",
+    "eslint": "^9.34.0",
     "husky": "^9.1.7",
     "nano-staged": "^0.8.0",
     "npm-run-all2": "^8.0.4",
     "prettier": "^3.6.2",
     "typescript": "^5.9.2",
     "unbuild": "^3.6.1",
-    "vite": "^7.1.2",
+    "vite": "^7.1.4",
     "vitest": "^3.2.4"
   },
   "nano-staged": {
