--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,7 @@ packages:
   - .
   - packages/*
 overrides:
-  esbuild: ^0.25.2
+  esbuild: ^0.25.9
 onlyBuiltDependencies:
   - esbuild
+  - unrs-resolver
